--- a/web/package.json
+++ b/web/package.json
@@ -13,14 +13,17 @@
     ]
   },
   "dependencies": {
+    "@redwoodjs/auth": "3.0.1",
     "@redwoodjs/forms": "3.0.1",
     "@redwoodjs/router": "3.0.1",
     "@redwoodjs/web": "3.0.1",
+    "@simplewebauthn/browser": "^6.0.0",
     "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.10.2",
     "@emotion/react": "^11.10.4",
     "@mantine/core": "^5.4.0",
     "@mantine/hooks": "^5.4.0"
