--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,5 +1,7 @@
 {
   "compilerOptions": {
+    "jsx": "react-jsx",
+    "jsxImportSource": "@emotion/react",
     "noEmit": true,
     "allowJs": true,
     "esModuleInterop": true,
