--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "packageManager": "yarn@3.2.3",
   "dependencies": {
+    "react-div-100vh": "^0.7.0",
     "react-icons": "^4.4.0"
   }
 }
